--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "eslint": "^7.3.1",
     "eslint-plugin-require-path-exists": "^1.1.9",
+    "jest": "^26.4.2",
     "nodemon": "^2.0.2",
     "prettier": "^2.0.2"
   },
